# my-own-investor

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
config/: settings.example.yaml  settings.yaml  universe.yaml  universe_india.yaml
dashboard/: app.py  common.py  market.py  mission.py  views.py
docs/: IMPLEMENTATION.md  PLAN.md  SETUP.md
docs/backtests/2026-07-06/: report-6dd732983d69.md  report-9810a1df9698.md
scripts/: github-workflow-refresh-seed-db.yml  refresh_seed.sh
src/moi/: __init__.py  __main__.py  cli.py  config.py  db.py  logging.py  ops.py  runlog.py  universe.py
src/moi/backtest/: __init__.py  engine.py
src/moi/execute/: __init__.py  executor.py  queue.py
src/moi/features/: __init__.py  market.py  momentum.py  panels.py  store.py  whales.py
src/moi/ingest/: __init__.py  congress.py  edgar_13f.py  edgar_form4.py  http.py  ibkr.py  macro.py  news.py  polymarket.py  prices.py  quality.py  runner.py
src/moi/migrations/: 001_init.sql  003_ml.sql  006_order_perm_id.sql  007_dedup_and_alerts.sql
src/moi/ml/: __init__.py  composite.py  cv.py  dataset.py  labels.py  portfolio.py  ranker.py
src/moi/orchestrator/: __init__.py  watch.py
src/moi/report/: __init__.py  digests.py  notify.py  suggestions.py  weekly.py  xray.py
tests/: conftest.py  test_13f.py  test_backtest.py  test_composite.py  test_congress.py  test_db.py  test_executor.py  test_ml.py  test_news.py  test_ops.py  test_portfolio.py  test_prices.py  test_quality.py  test_suggestions.py  test_universe.py  test_watch.py
(+1 files in other folders)
